Todas las pantallas, listas para cargar datos

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,18 +10,18 @@ import Icon from '../img/favicon.svg'
             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Que Hacer San Rafael</span>
         </a>
         <p class="my-6 text-gray-500 dark:text-gray-400">Conocer la ciudad nunca fue tan fácil</p>
-        <ul class="flex gap-4 flex-wrap justify-center items-center mb-6 text-gray-900 dark:text-white">
+        <ul class="flex gap-4 md:gap-10 flex-wrap justify-center items-center mb-6 text-gray-900 dark:text-white">
             <li>
-                <a href="/" class="hover:underline md:mr-6 ">Inicio</a>
+                <a href="/" class="hover:underline">Inicio</a>
             </li>
             <li>
-                <a href="/bodegas" class="hover:underline md:mr-6">Bodegas</a>
+                <a href="/bodegas" class="hover:underline">Bodegas</a>
             </li>
             <li>
-                <a href="/excursiones" class="hover:underline md:mr-6 ">Excursiones</a>
+                <a href="/excursiones" class="hover:underline ">Excursiones</a>
             </li>
             <li>
-                <a href="/atracciones-populares" class="hover:underline md:mr-6">Atracciones</a>
+                <a href="/atracciones" class="hover:underline">Atracciones</a>
             </li>
             <li>
                 <a href="https://wa.me/+542604371637?text=Hola%20Dylan%20te%20hablo%20por%20la%20p%C3%A1gina%20en%20la%20que%20ofreces%20actividades%20en%20San%20Rafael" target="_blank" class="mr-4 hover:underline md:mr-6">Contacto</a>
