--- a/src/pages/bodegas.astro
+++ b/src/pages/bodegas.astro
@@ -1,10 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import Hero from '../components/Hero.astro'
-import Activities from '../components/Activities.astro'
+import WineActivities from '../components/WineActivities.astro'
+import NearActivities from '../components/NearActivities.astro'
+import WineFAQ from '../components/WineFAQ.astro'
+
 ---
 <Layout title="Bodegas en San Rafael">
     <Hero title='Las mejores bodegas en San Rafael para visitar' description=''/>
-    <Activities title='Lista de actividades' description='' url='' ctaUrl=''/>
-    <Activities title='Otras actividades en San Rafael hoy' description='' url='' ctaUrl='sdsd'/>
+    <WineActivities title='Lista de actividades' description=''/>
+    <NearActivities title='Actividades cerca de San Rafael' description='' url='' ctaUrl=''/>
+    <WineFAQ/>
 </Layout>
