--- a/src/pages/excursiones.astro
+++ b/src/pages/excursiones.astro
@@ -1,10 +1,13 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import Hero from '../components/Hero.astro'
-import Activities from '../components/Activities.astro'
+import ExcursionsActivities from '../components/ExcursionsActivities.astro'
+import NearActivities from '../components/NearActivities.astro'
+import ExcursionsFAQ from '../components/ExcursionsFAQ.astro'
 ---
 <Layout title="Excursiones en San Rafael">
     <Hero title='Las mejores excursiones en San Rafael' description=''/>
-    <Activities title='Lista de actividades' description='' url='' ctaUrl=''/>
-    <Activities title='Otras actividades en San Rafael hoy' description='' url='' ctaUrl=''/>
+    <ExcursionsActivities title='Lista de actividades' description='' url='' ctaUrl=''/>
+    <NearActivities title='Actividades cerca de San Rafael' description='' url='' ctaUrl=''/>
+    <ExcursionsFAQ/>
 </Layout>
