--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import FAQ from '../components/FAQ.astro'
 ---
 
 <Layout title="Que hacer en San Rafael hoy | Excursiones en San Rafael Mendoza">
-    <Hero title='15 Mejores Cosas que Hacer en San Rafael Mendoza 2024' description='Descubrí las excursiones y actividades que hay para hacer en San Rafael. Explorá San Rafael y conocé sus curiosidades y características más típicas'/>
+    <Hero title='Mejores Cosas que Hacer en San Rafael Mendoza' description='Descubre excursiones, tours y atracciones para hacer en San Rafael.'/>
     <Activities title="Actividades en San Rafael hoy" description='' url='' ctaUrl=''/>
     <SoonActivities title="Próximos eventos" description='' url='/proximamente' ctaUrl='Ver todas las actividades'/>
     <Recomendations/>
