--- a/src/components/ExcursionsActivities.astro
+++ b/src/components/ExcursionsActivities.astro
@@ -1,9 +1,10 @@
 ---
+
 interface Props {
-  title: string;
-  description: string;
-  url: string;
-  ctaUrl: string;
+    title: string;
+    description: string;
+    url: string;
+    ctaUrl: string;
 }
 
 const { title } = Astro.props;
@@ -11,6 +12,7 @@ const { description } = Astro.props;
 
 import AllActivities from '../config/activities.json'
 import ActivityCard from "../components/ActivityCard.astro";
+
 ---
 <section class="bg-white dark:bg-gray-900">
     <div class="pt-8 px-4 mx-auto max-w-screen-xl lg:py-24 lg:px-6">
@@ -19,7 +21,7 @@ import ActivityCard from "../components/ActivityCard.astro";
             <p class="mb-4 font-light">{description}</p>
         </div>
         <div class="grid gap-8 sm:grid-cols-3 lg:grid-cols-4 py-4 md:py-4">
-            {AllActivities.filter((activity) => activity.location != "San Rafael").map((activity) => (
+            {AllActivities.filter((activity) => activity.type === "Excursion" && activity.location === "San Rafael").map((activity) => (
                 <ActivityCard 
                 url= {activity.url}
                 image= {activity.image}
@@ -29,7 +31,8 @@ import ActivityCard from "../components/ActivityCard.astro";
                 title= {activity.title}
                 description= {activity.description}
                 price= {activity.price} />
-            ))}
+            ))
+        }
         </div>
     </div>
 </section>
