--- a/src/components/WineActivities.astro
+++ b/src/components/WineActivities.astro
@@ -2,8 +2,6 @@
 interface Props {
   title: string;
   description: string;
-  url: string;
-  ctaUrl: string;
 }
 
 const { title } = Astro.props;
@@ -19,7 +17,7 @@ import ActivityCard from "../components/ActivityCard.astro";
             <p class="mb-4 font-light">{description}</p>
         </div>
         <div class="grid gap-8 sm:grid-cols-3 lg:grid-cols-4 py-4 md:py-4">
-            {AllActivities.filter((activity) => activity.location != "San Rafael").map((activity) => (
+            {AllActivities.filter((activity) => activity.type === "Bodegas" && activity.location === "San Rafael").map((activity) => (
                 <ActivityCard 
                 url= {activity.url}
                 image= {activity.image}
@@ -29,7 +27,8 @@ import ActivityCard from "../components/ActivityCard.astro";
                 title= {activity.title}
                 description= {activity.description}
                 price= {activity.price} />
-            ))}
+            ))
+            }
         </div>
     </div>
 </section>
