--- a/src/pages/proximamente.astro
+++ b/src/pages/proximamente.astro
@@ -5,5 +5,5 @@ import Activities from '../components/Activities.astro'
 ---
 <Layout title="Próximamente en San Rafael">
     <Hero title='Próximos Eventos en San Rafael' description=''/>
-    <Activities title='Lista de actividades' description='' url='' ctaUrl=''/>
+    <Activities title='Lista de actividades' url='' ctaUrl=''/>
 </Layout>
