--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,14 +7,16 @@ import SoonActivities from '../components/SoonActivities.astro'
 import Recomendations from '../components/Recomendations.astro'
 import Testimonials from '../components/Testimonials.astro'
 import FAQ from '../components/FAQ.astro'
+
 ---
 
 <Layout title="Que hacer en San Rafael hoy | Excursiones en San Rafael Mendoza">
     <Hero title='Mejores Cosas que Hacer en San Rafael Mendoza' description='Descubre excursiones, tours y atracciones para hacer en San Rafael.'/>
-    <Activities title="Actividades en San Rafael hoy" description='' url='' ctaUrl=''/>
+    <Activities title="Actividades en San Rafael hoy" url='' ctaUrl=''/>
     <SoonActivities title="Próximos eventos" description='' url='/proximamente' ctaUrl='Ver todas las actividades'/>
     <Recomendations/>
     <Testimonials/>
     <NearActivities title="Actividades cerca de San Rafael" description='' url='' ctaUrl=''/>
     <FAQ/>
 </Layout>
+
