--- a/src/pages/atracciones.astro
+++ b/src/pages/atracciones.astro
@@ -6,8 +6,8 @@ import FAQFilter from '../components/WineFAQ.astro'
 import NearActivities from '../components/NearActivities.astro'
 
 ---
-<Layout title="Eventos de musica y festivales en San Rafael">
-    <Hero title='Las atracciones más populares de San Rafael' description=''/>
+<Layout title="Las atracciones más populares de San Rafael | QHSanRafael">
+    <Hero title='Las Atracciones más Populares de San Rafael' description=''/>
     <AtractionsActivities title='Lista de actividades' description='' url='' ctaUrl=''/>
     <NearActivities title='Actividades cerca de San Rafael' description='' url='' ctaUrl=''/>
     <FAQFilter/>
