--- a/src/pages/bodegas.astro
+++ b/src/pages/bodegas.astro
@@ -7,7 +7,7 @@ import WineFAQ from '../components/WineFAQ.astro'
 
 ---
 <Layout title="Bodegas en San Rafael">
-    <Hero title='Las mejores bodegas en San Rafael para visitar' description=''/>
+    <Hero title='Las Mejores Bodegas en San Rafael para Visitar' description=''/>
     <WineActivities title='Lista de actividades' description=''/>
     <NearActivities title='Actividades cerca de San Rafael' description='' url='' ctaUrl=''/>
     <WineFAQ/>
