--- a/src/pages/excursiones.astro
+++ b/src/pages/excursiones.astro
@@ -6,7 +6,7 @@ import NearActivities from '../components/NearActivities.astro'
 import ExcursionsFAQ from '../components/ExcursionsFAQ.astro'
 ---
 <Layout title="Excursiones en San Rafael">
-    <Hero title='Las mejores excursiones en San Rafael' description=''/>
+    <Hero title='Las Mejores Excursiones en San Rafael' description=''/>
     <ExcursionsActivities title='Lista de actividades' description='' url='' ctaUrl=''/>
     <NearActivities title='Actividades cerca de San Rafael' description='' url='' ctaUrl=''/>
     <ExcursionsFAQ/>
