--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Navbar from '../components//Navbar.astro'
 import Footer from '../components/Footer.astro'
+import GoogleTag from '../components/GoogleTagManager.astro'
 
 
 
@@ -14,6 +15,7 @@ const { title } = Astro.props;
 <!doctype html>
 <html lang="en">
 	<head>
+		<GoogleTag></GoogleTag>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
