--- a/src/components/GoogleTagManager.astro
+++ b/src/components/GoogleTagManager.astro
@@ -7,3 +7,11 @@
 
   gtag('config', 'G-DF75HCT8R3');
 </script>
+
+<!-- Google Tag Manager -->
+<script type="text/partytown">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-PRDQ9RMQ');</script>
+  <!-- End Google Tag Manager -->
