--- a/src/components/AtractionsActivities.astro
+++ b/src/components/AtractionsActivities.astro
@@ -21,7 +21,7 @@ import ActivityCard from "./ActivityCard.astro";
             <p class="mb-4 font-light">{description}</p>
         </div>
         <div class="grid gap-8 sm:grid-cols-3 lg:grid-cols-4 py-4 md:py-4">
-            {AllActivities.filter((activity) => activity.type === "Atraccion" && activity.location === "San Rafael").map((activity) => (
+            {AllActivities.filter((activity) => activity.type === "Atracciones" && activity.location === "San Rafael").map((activity) => (
                 <ActivityCard 
                 url= {activity.url}
                 image= {activity.image}
