--- a/src/pages/bodegas.astro
+++ b/src/pages/bodegas.astro
@@ -6,7 +6,7 @@ import NearActivities from '../components/NearActivities.astro'
 import WineFAQ from '../components/WineFAQ.astro'
 
 ---
-<Layout title="Bodegas en San Rafael">
+<Layout title="Bodegas en San Rafael | QHSanRafael">
     <Hero title='Las Mejores Bodegas en San Rafael para Visitar' description=''/>
     <WineActivities title='Lista de actividades' description=''/>
     <NearActivities title='Actividades cerca de San Rafael' description='' url='' ctaUrl=''/>
