--- a/src/pages/excursiones.astro
+++ b/src/pages/excursiones.astro
@@ -5,7 +5,7 @@ import ExcursionsActivities from '../components/ExcursionsActivities.astro'
 import NearActivities from '../components/NearActivities.astro'
 import ExcursionsFAQ from '../components/ExcursionsFAQ.astro'
 ---
-<Layout title="Excursiones en San Rafael">
+<Layout title="Excursiones en San Rafael | QHSanRafael">
     <Hero title='Las Mejores Excursiones en San Rafael' description=''/>
     <ExcursionsActivities title='Lista de actividades' description='' url='' ctaUrl=''/>
     <NearActivities title='Actividades cerca de San Rafael' description='' url='' ctaUrl=''/>
