evento activity-btn

--- a/src/components/AtractionsActivities.astro
+++ b/src/components/AtractionsActivities.astro
@@ -30,7 +30,8 @@ import ActivityCard from "./ActivityCard.astro";
                 ratingComment= {activity.ratingComment}
                 title= {activity.title}
                 description= {activity.description}
-                price= {activity.price} />
+                price= {activity.price}
+                activityId= {activity.activityId} />
             ))
         }
         </div>
