--- a/src/components/WineActivities.astro
+++ b/src/components/WineActivities.astro
@@ -26,7 +26,8 @@ import ActivityCard from "../components/ActivityCard.astro";
                 ratingComment= {activity.ratingComment}
                 title= {activity.title}
                 description= {activity.description}
-                price= {activity.price} />
+                price= {activity.price}
+                activityId= {activity.activityId} />
             ))
             }
         </div>
