--- a/src/components/ActivityCard.astro
+++ b/src/components/ActivityCard.astro
@@ -8,6 +8,7 @@ interface Props {
     title: string;
     description: string;
     price: string;
+    activityId: string;
 }
 
 const { url } = Astro.props;
@@ -18,6 +19,7 @@ const { ratingComment } = Astro.props;
 const { title } = Astro.props;
 const { description } = Astro.props;
 const { price } = Astro.props;
+const { activityId } = Astro.props;
 
 ---
 
@@ -45,7 +47,7 @@ const { price } = Astro.props;
             </div>
         </a>
         <div class="flex items-center justify-end mt-4">
-            <a href={url} class="text-white w-full md:w-auto bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Más información</a>
+            <a href={url} id={activityId} class="text-white w-full md:w-auto bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Más información</a>
         </div>
 </div>
 </div>
