--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,8 @@
 ---
 import Navbar from '../components//Navbar.astro'
 import Footer from '../components/Footer.astro'
-import GoogleTag from '../components/GoogleTagManager.astro'
+import GoogleTag from '../components/GoogleTag.astro'
+import GoogleTagManager from '../components/GoogleTagManager.astro'
 
 
 
@@ -15,7 +16,8 @@ const { title } = Astro.props;
 <!doctype html>
 <html lang="en">
 	<head>
-		<GoogleTag></GoogleTag>
+		<GoogleTagManager/>
+		<GoogleTag/>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
@@ -28,7 +30,7 @@ const { title } = Astro.props;
 		<!-- Google Tag Manager (noscript) -->
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PRDQ9RMQ"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-		<!-- End Google Tag Manager (noscript) -->
+			<!-- End Google Tag Manager (noscript) -->
 		<Navbar></Navbar>
 		<slot></slot>
 		<Footer/>
