--- a/src/pages/atracciones.astro
+++ b/src/pages/atracciones.astro
@@ -6,7 +6,8 @@ import FAQFilter from '../components/WineFAQ.astro'
 import NearActivities from '../components/NearActivities.astro'
 
 ---
-<Layout title="Las atracciones más populares de San Rafael | QHSanRafael">
+<Layout title="Las atracciones más populares de San Rafael | QHSanRafael"
+metadescription='Conoce las atracciones más populares para visitar en San Rafael y no te pierdas nada. Las mejores atracciones que conocer en San Rafael encontralas en QHSR.'>
     <Hero title='Las Atracciones más Populares de San Rafael' description=''/>
     <AtractionsActivities title='Lista de actividades' description='' url='' ctaUrl=''/>
     <NearActivities title='Actividades cerca de San Rafael' description='' url='' ctaUrl=''/>
