--- a/src/pages/bodegas.astro
+++ b/src/pages/bodegas.astro
@@ -6,7 +6,8 @@ import NearActivities from '../components/NearActivities.astro'
 import WineFAQ from '../components/WineFAQ.astro'
 
 ---
-<Layout title="Bodegas en San Rafael | QHSanRafael">
+<Layout title="Bodegas en San Rafael | QHSanRafael"
+metadescription='Conoce las bodegas más populares para visitar en San Rafael y no te pierdas nada. Las mejores bodejas que conocer en San Rafael encontralas en QHSR.'>
     <Hero title='Las Mejores Bodegas en San Rafael para Visitar' description=''/>
     <WineActivities title='Lista de actividades' description=''/>
     <NearActivities title='Actividades cerca de San Rafael' description='' url='' ctaUrl=''/>
