--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,8 @@ import FAQ from '../components/FAQ.astro'
 
 ---
 
-<Layout title="Que hacer en San Rafael hoy | Excursiones en San Rafael Mendoza">
+<Layout title="Que hacer en San Rafael hoy | Excursiones en San Rafael Mendoza"
+        metadescription='Conoce las atracciones más populares para visitar en San Rafael y no te pierdas nada. Las mejores cosas que hacer gratis en San Rafael encontralas en QHSR.'>
     <Hero title='Mejores Cosas que Hacer en San Rafael Mendoza' description='Descubre excursiones, tours y atracciones para hacer en San Rafael.'/>
     <Activities title="Actividades en San Rafael hoy" url='' ctaUrl=''/>
     <Recomendations/>
