--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,9 +7,11 @@ import Footer from '../components/Footer.astro'
 
 interface Props {
 	title: string;
+	metadescription: any;
 }
 
 const { title } = Astro.props;
+const { metadescription } = Astro.props;
 ---
 
 <!doctype html>
@@ -23,7 +25,7 @@ const { title } = Astro.props;
 	})(window,document,'script','dataLayer','GTM-PRDQ9RMQ');</script>
 	<!-- End Google Tag Manager -->
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content={metadescription} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
