--- a/src/pages/excursiones/tour-bodega-bianchi-san-rafael.astro
+++ b/src/pages/excursiones/tour-bodega-bianchi-san-rafael.astro
@@ -12,7 +12,8 @@ import WhatsAppBTN from '../../components/WhatsAppBTN.astro'
 ---
 
 {AllActivities.filter((activity) => activity.id === "3").map((activity) => (
-            <Layout title= {activity.title + " | QHSanRafael"}>
+            <Layout title= {activity.title + " | QHSanRafael"}
+            metadescription={activity.metadescription}>
             <HeroActivity
             activityImage={activity.image} 
             activityAltImage={activity.Altimage}
