--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,6 @@
 ---
-import Navbar from '../components//Navbar.astro'
+import Navbar from '../components/Navbar.astro'
 import Footer from '../components/Footer.astro'
-
-
 
 
 interface Props {
