--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,8 @@ const { metadescription } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content={metadescription} />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.ico" sizes="192x192" />
+		<link rel="icon" type="image/x-icon" href="./favicon.ico">
+		<link rel="icon" type="image/png" href="./favicon.png" sizes="196x196">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
