--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import Footer from '../components/Footer.astro'
 
 interface Props {
 	title: string;
-	metadescription: any;
+	metadescription: string;
 }
 
 const { title } = Astro.props;
@@ -22,6 +22,7 @@ const { metadescription } = Astro.props;
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-PRDQ9RMQ');</script>
 	<!-- End Google Tag Manager -->
+		<title>{title}</title>
 		<meta charset="UTF-8" />
 		<meta name="description" content={metadescription} />
 		<meta name="viewport" content="width=device-width" />
@@ -29,7 +30,6 @@ const { metadescription } = Astro.props;
 		<link rel="icon" type="image/png" href="./favicon.png" sizes="196x196">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
 	</head>
 	<body>
 		<!-- Google Tag Manager (noscript) -->
