--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import Icon from '../img/favicon.svg'
+import Icon from '../img/faviconn.svg'
 ---
 
 <footer class=" p-4 bg-white md:p-8 lg:p-10 dark:bg-gray-800">
