--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,8 +26,8 @@ const { metadescription } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content={metadescription} />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/x-icon" href="./favicon.ico">
-		<link rel="icon" type="image/png" href="./favicon.png" sizes="196x196">
+		<link rel="icon" type="image/x-icon" href="./faviconn.ico">
+		<link rel="icon" type="image/png" href="./faviconn.png" sizes="196x196">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<meta name="generator" content={Astro.generator} />
 	</head>
