--- a/src/components/AtractionsFAQ.astro
+++ b/src/components/AtractionsFAQ.astro
@@ -6,7 +6,7 @@ import FAQs from "../config/faq.json";
     <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-24 lg:px-6">
         <p class="mb-8 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Preguntas frecuentes de los viajeros</p>
         <div class="grid pt-8 text-left border-t border-gray-200 md:gap-8 dark:border-gray-700 md:grid-cols-2">
-            {FAQs.filter((faq) => faq.type === "Excursion").map((faq) => (
+            {FAQs.filter((faq) => faq.type === "Atracciones").map((faq) => (
                 <div>
                     <div class="mb-10">
                         <h2 class="flex items-center mb-4 text-lg font-medium text-gray-900 dark:text-white">
