--- a/src/pages/atracciones.astro
+++ b/src/pages/atracciones.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro'
 import Hero from '../components/Hero.astro'
 import AtractionsActivities from '../components/AtractionsActivities.astro'
-import FAQFilter from '../components/WineFAQ.astro'
+import FAQFilter from '../components/AtractionsFAQ.astro'
 import NearActivities from '../components/NearActivities.astro'
 
 ---
