--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import Footer from '../components/Footer.astro'
 
 interface Props {
 	title: string;
-	metadescription: string;
+	metadescription: any;
 }
 
 const { title } = Astro.props;
