--- a/src/components/Activities.astro
+++ b/src/components/Activities.astro
@@ -21,7 +21,7 @@ import ActivityCard from "../components/ActivityCard.astro";
             <p class="mb-4 font-light"></p>
         </div>
         <div class="grid gap-8 sm:grid-cols-3 lg:grid-cols-4 py-4 md:py-4">
-            {AllActivities.map((activity) => (
+            {AllActivities.reverse().map((activity) => (
                 <ActivityCard 
                 url= {activity.url}
                 image= {activity.image}
