--- a/src/components/WineActivities.astro
+++ b/src/components/WineActivities.astro
@@ -10,13 +10,13 @@ const { description } = Astro.props;
 import AllActivities from '../config/activities.json'
 import ActivityCard from "../components/ActivityCard.astro";
 ---
-<section class="bg-white dark:bg-gray-900">
+<section class="bg-gray-900">
     <div class="pt-8 px-4 mx-auto max-w-screen-xl lg:py-24 lg:px-6">
-        <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400">
-            <h2 class="text-4xl tracking-tight font-bold text-gray-900 dark:text-white">{title}</h2>
+        <div class="max-w-screen-lg sm:text-lg text-gray-400">
+            <h2 class="text-4xl tracking-tight font-bold text-white">{title}</h2>
             <p class="mb-4 font-light">{description}</p>
         </div>
-        <div class="grid gap-8 sm:grid-cols-3 lg:grid-cols-4 py-4 md:py-4">
+        <div class="grid justify-items-center gap-8 sm:grid-cols-3 lg:grid-cols-4 py-4 md:py-4">
             {AllActivities.filter((activity) => activity.type === "Bodegas" && activity.location === "San Rafael").map((activity) => (
                 <ActivityCard 
                 url= {activity.url}
